# gass

./: .clang-tidy  .travis.yml  .travis.yms  BuildInstructions.txt  CMakeLists.txt  CMakePresets.json  ProjectHome.md  README.md  Roadmap.txt  build-dep-ubuntu.sh  build-msvc.bat  build-ubuntu.sh  travis-build.sh  vcpkg.json
applications/GASSEd/: CMakeLists.txt  CustomTypes.cpp  CustomTypes.h  GASSEd.cpp  GASSEd.h  GASSEd.xml  GASSPropertyWidget.cpp  GASSPropertyWidget.h  GASSRenderWidget.cpp  GASSRenderWidget.h  GASSResourceTreeWidget.cpp  GASSResourceTreeWidget.h  GASSSSaveSceneWidget.cpp  GASSSSaveSceneWidget.h  GASSSceneSelectionWidget.cpp  GASSSceneTreeWidget.cpp  GASSSceneTreeWidget.h  GASSTools.cpp  GASSTools.h  fileedit.cpp  fileedit.h  variantfactory.cpp  variantfactory.h  variantmanager.cpp  variantmanager.h
applications/GASSEd/Configuration/: GASS.xml  GASSOSG.xml  GASSOSGEarth.xml  GASSOgre.xml
samples/core/reflection/: CMakeLists.txt  SampleCoreReflection.cpp
samples/core/rtc/: CMakeLists.txt  SampleCoreRTC.cpp
samples/sim/: CMakeLists.txt
samples/sim/editor/: CMakeLists.txt  SampleSimEditor.cpp  SampleSimEditor.xml
samples/sim/gui/: CMakeLists.txt  SampleDialog.cpp  SampleDialog.h  SampleSimGUI.cpp  SampleSimGUI.xml  SampleSimGUIOSG.xml  SampleSimGUIOgre.xml
samples/sim/network/: CMakeLists.txt  Client.h  SampleNetworkPx.xml  SampleSimNetwork.cpp  SampleSimNetwork.xml  Server.h  SimApplication.h
samples/sim/ogre/: CMakeLists.txt  SampleSimOgreTerrain.cpp  SampleSimOgreTerrain.xml
samples/sim/osgearth/: CMakeLists.txt  SampleSimOSGEarth.cpp  SampleSimOSGEarth.xml
samples/sim/physics/: CMakeLists.txt  SampleSimPhysics.cpp  SampleSimPhysics.xml
samples/sim/rtc/: CMakeLists.txt  SampleSimRTC.cpp
samples/sim/vehicle/: CMakeLists.txt  SampleSimVehicle.cpp  SampleSimVehicle.xml
source/: CMakeLists.txt
source/Core/: CMakeLists.txt  Common.h  GASSConfig.h.in  GASSVersion.h.in  Prerequisits.h
source/Core/ComponentSystem/: GASSComponent.cpp  GASSComponent.h  GASSComponentContainer.cpp  GASSComponentContainer.h  GASSComponentContainerFactory.cpp  GASSComponentContainerFactory.h  GASSComponentContainerTemplate.cpp  GASSComponentContainerTemplate.h  GASSComponentContainerTemplateFactory.cpp  GASSComponentContainerTemplateFactory.h  GASSComponentContainerTemplateManager.cpp  GASSComponentContainerTemplateManager.h  GASSComponentFactory.cpp  GASSComponentFactory.h  GASSSchemaManager.cpp  GASSSchemaManager.h
source/Core/Math/: GASSAABox.cpp  GASSAABox.h  GASSAARect.cpp  GASSAARect.h  GASSEllipsoid.cpp  GASSEllipsoid.h  GASSKeyframeAnimation.cpp  GASSKeyframeAnimation.h  GASSLineSegment.h  GASSLineSegment2D.h  GASSMat4.h  GASSMath.cpp  GASSMath.h  GASSMatrix.cpp  GASSMatrix.h  GASSPath.cpp  GASSPath.h  GASSPlane.cpp  GASSPlane.h  GASSPolygon.cpp  GASSPolygon.h  GASSQuaternion.cpp  GASSQuaternion.h  GASSRay.h  GASSRotationSpline.cpp  GASSRotationSpline.h  GASSSphere.cpp  GASSSphere.h  GASSSpline.cpp  GASSSpline.h  GASSSplineAnimation.cpp  GASSSplineAnimation.h  GASSTriangle.cpp  GASSTriangle.h  GASSVec2.h  GASSVec3.h  GASSVec4.h  (+2 more)
source/Deprecated/: GASSTBBUpdateTask.h
source/Modules/: CMakeLists.txt
source/Plugins/: CMakeLists.txt
source/Sim/: CMakeLists.txt  GASS.h  GASSASScriptComponent.cpp  GASSASScriptComponent.h  GASSBaseSceneComponent.cpp  GASSBaseSceneComponent.h  GASSBaseSceneManager.cpp  GASSBaseSceneManager.h  GASSCommon.h  GASSComponent.cpp  GASSComponent.h  GASSComponentFactory.cpp  GASSComponentFactory.h  GASSEulerRotation.h  GASSFileResourceCallback.h  GASSGeoLocation.h  GASSGeometryFlags.cpp  GASSGeometryFlags.h  GASSGraphicsMaterial.h  GASSGraphicsMesh.cpp  GASSGraphicsMesh.h  GASSPhysicsMaterial.h  GASSPhysicsMaterialManager.cpp  GASSPhysicsMaterialManager.h  GASSPhysicsMesh.cpp  GASSPhysicsMesh.h  GASSPlatformDetectionData.h  GASSPlatformTeam.cpp  GASSPlatformTeam.h  GASSPlatformType.cpp  GASSPlatformType.h  GASSResource.cpp  GASSResource.h  GASSResourceGroup.cpp  GASSResourceGroup.h  GASSResourceHandle.cpp  GASSResourceHandle.h  GASSResourceLocation.cpp  GASSResourceLocation.h  GASSResourceManager.cpp  (+34 more)
source/Test/: CMakeLists.txt
trunk/: BuildInstructions.txt  CMakeLists.txt  Doxyfile.in  Roadmap.txt  contributors.txt
trunk/CMake/: 3rdPartySetup.cmake  AngelScriptDepModule.cmake  BoostDepModule.cmake  Common.cmake  FindAngelScript.cmake  FindGASSCore.cmake  FindGASSCoreThirdParty.cmake  FindGASSSharedLibraries.cmake  FindGASSSim.cmake  FindGASSSimThirdParty.cmake  FindHydrax.cmake  FindMyGUI.cmake  FindODE.cmake  FindOGRE.cmake  FindOIS.cmake  FindOSGExt.cmake  FindPagedGeometry.cmake  FindPhysX.cmake  FindPhysX3.cmake  FindQTPropertyBrowser.cmake  FindRakNet.cmake  FindSkyX.cmake  FindTBB.cmake  FindTinyXML2.cmake  HydraxDepModule.cmake  MyGUIDepModule.cmake  OISDepModule.cmake  OSGDepModule.cmake  OgreDepModule.cmake  OpenALDepModule.cmake  PagedGeometryDepModule.cmake  PhysXDepModule.cmake  SkyXDepModule.cmake  TBBDepModule.cmake  TinyXML2DepModule.cmake
trunk/Scripts/: GASSCore4.lua  GASSPluginODE4.lua  GASSPluginOIS4.lua  GASSPluginOgre4.lua  SimTest4sln.lua  TODO.txt
trunk/Tools/: premake4
trunk/builds/: GASSPluginPagingGeometry.vcproj  PluginOSG.vcproj
trunk/doc/: GASS.doc
trunk/msvc2010/: GASSCore.vcxproj.filters  GASSEditorModule.vcxproj  GASSPluginAI.vcxproj  GASSPluginAI.vcxproj.filters  GASSPluginBase.vcxproj  GASSPluginBase.vcxproj.filters  GASSPluginEnvironment.vcxproj  GASSPluginEnvironment.vcxproj.filters  GASSPluginGame.vcxproj  GASSPluginGame.vcxproj.filters  GASSPluginMyGUI.vcxproj.filters  GASSPluginODE.vcxproj  GASSPluginOIS.vcxproj  GASSPluginOIS.vcxproj.filters  GASSPluginOSG.vcxproj.filters  GASSPluginOgre.vcxproj  GASSPluginOgre.vcxproj.filters  GASSPluginPagedGeometry.vcxproj.filters  GASSPluginPhysX3.vcxproj  GASSPluginRakNet.vcxproj  GASSPluginRakNet.vcxproj.filters  GASSPluginScript.vcxproj.filters  GASSSim.sln
trunk/samples/: CMakeLists.txt
trunk/source/: CMakeLists.txt
trunk/tools/: Build GASS.bat  Generate build-files.bat  pack_core_dependecies.bat  pack_dependecies.bat
(+3924 files in other folders)
