if(GASS_BUILD_CORE)
	ADD_SUBDIRECTORY(Core)
endif()
if(GASS_BUILD_SIM)
	ADD_SUBDIRECTORY(Dependencies/Angelscript)
	ADD_SUBDIRECTORY(Dependencies/ImGui)
	ADD_SUBDIRECTORY(Sim)
	ADD_SUBDIRECTORY(Plugins)
	ADD_SUBDIRECTORY(Modules)
endif()

if(GASS_BUILD_TESTS AND GASS_BUILD_CORE)
	ADD_SUBDIRECTORY(Test)
endif()